samples/_failures_safe/1761712376_972281_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1822c59.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_b1822c59.c:150:24: error: expected declaration or statement at end of input
  150 |                        parser->current_token.value, parser->current_token.line, parser->current_token.column);
      |                        ^~~~~~
./samples/SAFE/__tmp_b1822c59.c:150:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1822c59.c:150:24: error: expected declaration or statement at end of input
